Loris is an open source library implementing sound analysis,
synthesis, and morphing, developed by Kelly Fitz and Lippold Haken
at the CERL Sound Group. Loris includes a C++ class library, a
Python module, a C-linkable interface, and documentation.

Loris 1.9 includes ...

A detailed list of major changes is given in the change 
history, below. 

Loris can be downloaded from http://sourceforge.net/projects/loris

For more information about Loris, contact the developers at
loris@cersloundgroup.org, or visit them at
http://www.cerlsoundgroup.org/Loris

Please send bug reports to loris@cerlsoundgroup.org

Loris is free software. Please see the file COPYING for details.

Loris is Copyright (c) 1999-2014 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by release number:

-------------------------------------------------------
changes since 1.8 release:

- Added configuration option to build (or not build) the command
line utilities.

- Converted PartialList from a typedef into a class (some changes 
to the C++ interface, no changes to procedural or Python interfaces).

-------------------------------------------------------
changes since 1.7 release:

- Enabled channelization with a constant reference frequency
specification in Python interface.

- Fixed errors in the names of some analyzer bandwidth enhancement
configuration functions in the C interface. 

- Improved data type size specification in SdifFile.C -- can now
define symbols like SIZEOF_INT during build to specify the
sizes of 2- and 4- byte integer types (if not using the 
autotools, which do this automatically). 

- Fixed a bug in the Csound5 opcodes that prevented morphing 
from producing any output.

-------------------------------------------------------
changes since 1.6 release:

- Improved behavior of cropping in Python and procedural interfaces
such that Partials left empty after cropping are removed from the
PartialList. 
