@@ -39,7 +39,7 @@ pyexec_PYTHON = loris.py
 
 pyexec_LTLIBRARIES = _loris.la
 nodist__loris_la_SOURCES = $(PYTHON_WRAPPER)
-_loris_la_CXXFLAGS = -I$(top_srcdir)/src $(PYFLAGS) 
+_loris_la_CXXFLAGS = -I$(top_srcdir)/src -I$(PYINCLUDE) $(PYFLAGS) 
 _loris_la_LIBADD = $(top_builddir)/src/libloris.la 
 _loris_la_LDFLAGS = -module -avoid-version 
 
