@@ -3,7 +3,7 @@ synthesis, and morphing, developed by Kelly Fitz and Lippold Haken
 at the CERL Sound Group. Loris includes a C++ class library, a
 Python module, a C-linkable interface, and documentation.
 
-Loris 1.9 includes ...
+Loris 1.9 includes minor bug fixes and API enhancements. 
 
 A detailed list of major changes is given in the change 
 history, below. 
@@ -31,6 +31,15 @@ line utilities.
 
 - Converted PartialList from a typedef into a class (some changes 
 to the C++ interface, no changes to procedural or Python interfaces).
+
+- In the SWIG (Python) interface, added many of the PartialList 
+mutation functions to the PartialList class itself. 
+
+- Updated Python module test code and SWIG (Python) interface to be
+compatible with Python 3 (as well as Python 2.6/7). Earlier versions
+of Python are no longer supported. 
+
+- Removed support for Csound4.
 
 -------------------------------------------------------
 changes since 1.7 release:
